RESOLVED FIXED74398
HTML details summary not working with form controls
https://bugs.webkit.org/show_bug.cgi?id=74398
Summary HTML details summary not working with form controls
Hajime Morrita
Reported 2011-12-13 04:02:32 PST
Attachments
Patch (4.77 KB, patch)
2011-12-13 04:07 PST, Hajime Morrita
no flags
Patch (4.71 KB, patch)
2011-12-13 18:05 PST, Hajime Morrita
no flags
Hajime Morrita
Comment 1 2011-12-13 04:07:39 PST
Hajime Morrita
Comment 2 2011-12-13 04:08:21 PST
Hi Kent-san, Could you take a look?
Kent Tamura
Comment 3 2011-12-13 17:04:07 PST
Comment on attachment 118999 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=118999&action=review > LayoutTests/fast/html/details-click-controls-expected.txt:1 > +ALERT: [object HTMLInputElement] Do you need this ALERT message?
Hajime Morrita
Comment 4 2011-12-13 18:05:22 PST
Hajime Morrita
Comment 5 2011-12-13 18:05:59 PST
> Do you need this ALERT message? No! Thanks for the catch. I updated the patch.
Kent Tamura
Comment 6 2011-12-13 18:20:59 PST
Comment on attachment 119127 [details] Patch Looks ok.
WebKit Review Bot
Comment 7 2011-12-13 20:59:49 PST
Comment on attachment 119127 [details] Patch Clearing flags on attachment: 119127 Committed r102734: <http://trac.webkit.org/changeset/102734>
WebKit Review Bot
Comment 8 2011-12-13 20:59:53 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.