HTML details summary not working with form controls https://bugs.webkit.org/show_bug.cgi?id=74398

Patch by Hajime Morrita <morrita@chromium.org> on 2011-12-13
Reviewed by Kent Tamura.

Source/WebCore:

Allowed HTMLSummaryElement to skip the toggle logic if the event
target is a form control.

Test: fast/html/details-click-controls.html

* html/HTMLSummaryElement.cpp:
(WebCore::isClickableControl):
(WebCore::HTMLSummaryElement::defaultEventHandler):

LayoutTests:

* fast/html/details-click-controls-expected.txt: Added.
* fast/html/details-click-controls.html: Added.

Canonical link: https://commits.webkit.org/91121@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102734 268f45cc-cd09-0410-ab3c-d52691b4dbfc